Fixes placeholder element's height so page doesn't jump on drag start.

--- a/jquery.nestable.editmode.less
+++ b/jquery.nestable.editmode.less
@@ -83,6 +83,10 @@ body {
     }
 }
 
+.dd-placeholder {
+    margin: 0px 0px 5px;
+}
+
 button[data-action="collapse"], button[data-action="expand"] {
     text-indent: 0;
     width: 30px;
